# guidance-for-claude-code-with-amazon-bedrock

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  QUICK_START.md  README.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: RELEASE_INSTRUCTIONS.md  bandit.yml  cfn_nag.yml  release-initiate.yml  release-merge-tag.yml  release.yml  scanners.yml  semgrep.yml  stale.yml  validate-regions.yml
assets/claude-code-plugins/: CONTRIBUTING.md  README.md
assets/docs/: ANALYTICS.md  ARCHITECTURE.md  CLI_REFERENCE.md  COST_ATTRIBUTION.md  COWORK_3P.md  DEPLOYMENT.md  LLM_GATEWAY.md  LOCAL_TESTING.md  MONITORING.md  QUOTA_MONITORING.md  README.md  WINDOWS_BUILD_SYSTEM.md
assets/docs/providers/: auth0-setup.md  (+4 more)
assets/images/: architecture-diagram.md  credential-flow.drawio  otel-monitoring-flow.drawio
deployment/infrastructure/: analytics-pipeline.yaml  bedrock-auth-auth0.yaml  bedrock-auth-azure.yaml  bedrock-auth-cognito-pool.yaml  bedrock-auth-idc.yaml  bedrock-auth-okta.yaml  bedrock-authentication.yaml  claude-code-dashboard.yaml  codebuild-windows.yaml  cognito-identity-pool.yaml  cognito-user-pool-setup.yaml  distribution.yaml  logs-insights-queries.yaml  metrics-aggregation.yaml  monitoring-dashboard.yaml  networking.yaml  otel-collector.yaml  quota-monitoring.yaml
scripts/: validate_bedrock_regions.py
source/: pyproject.toml
source/claude_code_with_bedrock/: __init__.py  config.py  models.py  validators.py
source/claude_code_with_bedrock/cli/: __init__.py
source/claude_code_with_bedrock/cli/commands/: __init__.py  builds.py  cleanup.py  cowork.py  deploy.py  destroy.py  distribute.py  init.py  package.py  status.py  test.py
source/claude_code_with_bedrock/cli/utils/: __init__.py  aws.py  cf_exceptions.py  cloudformation.py  cowork_3p.py  display.py  progress.py  validators.py
source/claude_code_with_bedrock/utils/: url_validation.py
source/cognito_auth/: __main__.py
source/credential_provider/: __init__.py  __main__.py
source/otel_helper/: __init__.py  __main__.py  otel-helper.sh
source/tests/: test_confidential_client.py  test_models.py  test_silent_refresh.py  test_url_validation_security.py  test_windows_keyring_latency.py
(+36 files in other folders)
