[tool.poetry]
name = "claude-code-with-bedrock"
version = "1.1.0"
description = "Deploy and manage Claude Code on Amazon Bedrock"
authors = ["Claude Code Team <claude-code@example.com>"]
readme = "../README.md"
license = "MIT"
keywords = ["aws", "bedrock", "claude", "ai", "authentication", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "credential_provider" },
    { include = "claude_code_with_bedrock" }
]

[tool.poetry.scripts]
claude-code-with-bedrock = "claude_code_with_bedrock.cli:main"
ccwb = "claude_code_with_bedrock.cli:main"
credential-provider = "credential_provider:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
boto3 = "^1.28.0"
requests = "^2.31.0"
PyJWT = "^2.8.0"
keyring = "^24.0.0"
cryptography = ">=44.0.1"
cleo = "^2.0.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
questionary = "^2.0.0"
cfn-flip = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.3.0"
nuitka = "^2.0.0"
ordered-set = "^4.1.0"
zstandard = "^0.22.0"
pyinstaller = "^6.3.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
types-requests = "*"
pre-commit = "^3.5.0"
cfn-lint = "^0.83.0"
yamllint = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true